--- a/lista-de-tarefas/src/components/Main.css
+++ b/lista-de-tarefas/src/components/Main.css
@@ -37,3 +37,30 @@
     align-items: center;
     justify-content: center;
 }
+
+.tarefas {
+    margin-top: 30px;
+}
+
+.tarefas li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.tarefas li:hover {
+    background: #51c5de;
+    cursor: pointer;
+    transition: all 600ms;
+}
+
+.tarefas li .edit {
+    margin-right: 15px;
+    background-color: #51c5de;
+}
+
+.tarefas li .delete {
+    margin-right: 15px;
+    background-color: #f04c64;
+}
